--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tweeter",
   "version": "1.0.0",
-  "description": "A twitter clone by Lighthouse Labs for web bootcamp students to learn front-end dev skillz",
+  "description": "A twitter clone",
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
-    "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js"
+    "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js",
+    "scss": "sass sass/style.scss public/styles/style.css"
   },
   "author": "Lighthouse Labs",
   "license": "ISC",
@@ -16,7 +17,8 @@
     "express": "^4.13.4",
     "md5": "^2.1.0",
     "moment": "^2.22.2",
-    "mongodb": "^2.2.35"
+    "mongodb": "^2.2.35",
+    "node-sass-middleware": "^0.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
